--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -2,8 +2,8 @@
 <h3>Orbit Report</h3>
 <table>
    <tr class="header-row">
-      <th class="sortable" (click)="sort('Name')">Name</th>
-      <th class="sortable"(click)="sort('Type')">Type</th>
+      <th class="sortable" (click)="sort('name')">Name</th>
+      <th class="sortable"(click)="sort('type')">Type</th>
       <th>Operational</th>
       <th>Orbit Type</th>
       <th>Launch Date</th>
